hphp/hack/test/typecheck/generic_incompatible_implementation2.php.exp
File "generic_incompatible_implementation2.php", line 5, characters 7-9:
Class Foo does not correctly implement all required methods  (Typing[4110])
File "generic_incompatible_implementation2.php", line 5, characters 22-24:
Some methods are incompatible with those declared in type Bar
Read the following to see why:
File "generic_incompatible_implementation2.php", line 6, characters 19-19:
Member f has the wrong type
File "generic_incompatible_implementation2.php", line 6, characters 26-28:
This is a num (int/float)
File "generic_incompatible_implementation2.php", line 6, characters 21-21:
It is incompatible with a value of generic type T
